--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Griffpatch</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>Ghibbli Network</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+  <nav class="menu">
+    <ul class="menu__list">
+      <p>Griffpatch</p>
+      <li class="menu__group"><a href="https://www.youtube.com/user/griffpatch" class="menu__link">Youtube</a></li>
+      <li class="menu__group"><a href="https://scratch.mit.edu/users/griffpatch/" class="menu__link">Scratch</a></li>
+      <li class="menu__group"><a href="https://griffpatch.github.io/scratch-gui/" class="menu__link">The scratch extension</a></li>
+    </ul>
+  </nav>
+</div>
+  </div>
+  <div id="Presentation">
+  Welcome in the griffpatch's github website !
+  </div>
+
+  </body>
 </html>
